# sgs

./: .cproject  .project  AUTHOR  CMakeLists.txt  README  TODO
Debug/: makefile  sgs  sources.mk
Debug/contrib/tinyxml/: subdir.mk  tinystr.d  tinyxml.d  tinyxmlerror.d  tinyxmlparser.d
Debug/lib/helper/: RandomNumbers.d  subdir.mk
Debug/lib/simulation/: ConsumerOwner.d  EnergyDistributionPlanFactory.d  EnergyDistributionPlanRepeat.d  EnergyDistributionPlanStatic.d  Fridge.d  Medium.d  ProducerOwner.d  Simulation.d  SimulationBuilder.d  Windmill.d  subdir.mk
Debug/src/: sgs.d  subdir.mk
contrib/LSF/: CMakeLists.txt  EnergyException.h  LeastSquareFit.cpp  LeastSquareFit.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
contrib/tinyxml/: CMakeLists.txt  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
contrib/tinyxpath/: CMakeLists.txt  xpath_expression.h  xpath_stream.h  xpath_syntax.cpp
etc/: Klassendiagramm.zargo  R2graphs  RExtractReferenceLoad  Rcutting  RggregateScript  RplotAdjustment  config.dtd  csvWithRToUsage  exec.sh  expectedLoad  fallSolarFactor.txt  fallSolarPlanFactor.txt  fallWindFactor.txt  fallWindIsFactor.txt  fallWindPlanFactor.txt  plotEnergyPlans  plotGraphs  rscript  solar_spring  solar_winter  springSolarFactor.txt  springSolarPlanFactor.txt  springWindIsFactor.txt  springWindPlanFactor.txt  summerSolarIsFactor.txt  summerSolarPlanFactor.txt  summerWindFactor.txt  test.xml  wind_spring  wind_winter  windpower  winterWindIsFactor.txt
etc/data/: expectedLoad  fallSolarIsFactor.txt  fallSolarPlanFactor.txt  fallWindIsFactor.txt  fallWindPlanFactor.txt  springSolarIsFactor.txt  springWindIsFactor.txt  summerSolarIsFactor.txt  summerWindIsFactor.txt  summerWindPlanFactor.txt  winterSolarIsFactor.txt  winterSolarPlanFactor.txt  winterWindPlanFactor.txt
etc/eex/: differences  downloadist  extractFactors  plotIsPlanGraphs
etc/old/: RggregateScript  plotSmoothGraph
lib/builder/: CMakeLists.txt  ConfigBuilder.cpp  ConfigBuilder.h
lib/helper/: CMakeLists.txt  RandomNumbers.cpp  RandomNumbers.h
lib/simulation/: CMakeLists.txt  Cattle.h  ChargeException.h  Consumer.cpp  Consumer.h  ConsumerOwner.cpp  ConsumerOwner.h  DeviceFactory.cpp  DeviceFactory.h  EnergyDistributionPlan.h  EnergyDistributionPlanFactory.cpp  EnergyDistributionPlanFactory.h  EnergyDistributionPlanRepeat.cpp  EnergyDistributionPlanRepeat.h  EnergyDistributionPlanStatic.cpp  EnergyDistributionPlanStatic.h  EnergyException.h  EnergyPlan.cpp  EnergyPlan.h  EnergyPlanDynamic.cpp  EnergyPlanDynamic.h  EnergyPlanFactory.cpp  EnergyPlanFactory.h  EnergyPlanStatic.cpp  EnergyPlanStatic.h  Fridge.cpp  Fridge.h  Light.h  Medium.cpp  Medium.h  MediumEndpoint.h  NoSuchEnergyPlanException.h  Parsable.h  ParserException.h  Producer.cpp  Producer.h  ProducerOwner.cpp  ProducerOwner.h  Radio.h  Simulation.cpp  (+7 more)
lib/simulation/consumers/: Consumer.cpp  Consumer.h  ConsumerOwner.cpp  ConsumerOwner.h
lib/simulation/consumers/devices/: Cattle.h  Fridge.h  Light.h  Radio.h  Stove.h  Television.h  Ventilator.h
lib/simulation/energy/: EnergyPlan.cpp  EnergyPlan.h
lib/simulation/energy/plans/: EnergyPlanDynamic.h  EnergyPlanStatic.cpp  EnergyPlanStatic.h
lib/simulation/exceptions/: ParserException.h
lib/simulation/producers/: Producer.cpp  Producer.h  ProducerOwner.cpp  ProducerOwner.h
lib/simulation/producers/devices/: Windmill.h
src/: cb.cpp  sgs.cpp
src/builder/: CMakeLists.txt  ConfigBuilder.cpp  ConfigBuilder.cpp.old  ConfigBuilder.h
src/helper/: DomainException.h  Logger.cpp  Logger.h  RandomNumbers.cpp  RandomNumbers.h  Utils.cpp  Utils.h
src/simulation/: CMakeLists.txt  DeviceFactory.cpp  DeviceFactory.h  Medium.cpp  Medium.h  MediumEndpoint.h  Parsable.h  Simulation.cpp  Simulation.h  SimulationBuilder.cpp  SimulationBuilder.h  Sizes.h
src/simulation/consumers/: Consumer.cpp  Consumer.h  ConsumerOwner.cpp  ConsumerOwner.h
src/simulation/consumers/devices/: Appliances.h  Boiler.h  BoilerHigh.h  BoilerLow.h  BoilerMid.h  Coffeemachine.h  CoffeemachineHigh.h  CoffeemachineLow.h  ComputerHigh.h  ComputerLow.h  ComputerMid.h  Dishwasher.h  DishwasherHigh.h  DishwasherLow.h  DishwasherMid.h  Freezer.h  FreezerHigh.h  FreezerLow.h  FreezerMid.h  Fridge.h  FridgeHigh.h  FridgeLow.h  FridgeMid.h  Heater.h  HeaterHigh.h  HeaterLow.h  Kettle.h  KettleHigh.h  KettleLow.h  Light.h  LightHigh.h  LightLow.h  Microwave.h  MicrowaveHigh.h  MicrowaveLow.h  Oven.h  Radio.h  StandBy.h  Stove.h  StoveHigh.h  (+14 more)
src/simulation/consumers/strategies/: BackpackStrategy.cpp  BackpackStrategy.h  BasicStrategy.cpp  BasicStrategy.h  ImprovedStrategy.cpp  ImprovedStrategy.h  Strategy.cpp  Strategy.h  ThresholdAccepting.cpp  ThresholdAccepting.h
src/simulation/energy/: EnergyPlan.cpp  EnergyPlan.h
src/simulation/energy/plans/: EnergyPlanDynamic.h.old  EnergyPlanInfinitePeriod.cpp  EnergyPlanInfinitePeriod.h  EnergyPlanSelective.cpp  EnergyPlanSelective.h  EnergyPlanSelectivePeriod.cpp  EnergyPlanSelectivePeriod.h  EnergyPlanStatic.cpp  EnergyPlanStatic.h
src/simulation/exceptions/: IOException.h  NoSuchDeviceException.h  NoSuchEnergyPlanException.h  ParserException.h
src/simulation/producers/: Producer.cpp  Producer.h  ProducerOwner.cpp  ProducerOwner.h
src/simulation/producers/devices/: AvgLoad.cpp  AvgLoad.h  BaseLoad.h  BaselLoad.cpp  Conventional.cpp  Conventional.h  Solar.cpp  Solar.h  Windmill.cpp  Windmill.h
testing/: CMakeLists.txt  testing.cpp
testing/strategies/: TestBackpackStrategy.cpp  TestBackpackStrategy.h
tools/: .runcinclude2dot.sh.swp  runcinclude2dot.sh
